docs: fix typo in HTML text

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -8,8 +8,8 @@
     <a href="/create-point"><span></span>Cadastre ponto de coleta</a>
   </header>
   <main>
-    <h1>Seu marketplace de coleta de resíduos</h1>
-    <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente.</p>
+    <h1>Seu ponto de encontro com a reciclagem.</h1>
+    <p>Descubra onde reciclar. Faça a diferença com um clique.</p>
     <a href="#"><span></span><strong>Pesquisar pontos de coleta</strong></a>
   </main>
 </div>
