--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -31,7 +31,7 @@ styles %}
       </div>
 
       <div class="field">
-        <label for="address2">Número/Complemento</label>
+        <label for="address2">Bairro/Complemento</label>
         <input type="text" name="address2" required />
       </div>
     </div>
@@ -61,31 +61,31 @@ styles %}
     </legend>
 
     <div class="items-grid">
-      <li data-id="Lâmpadas">
+      <li data-id=" Lâmpadas">
         <img src="assets/lampadas.svg" alt="Lâmpadas" /><span>Lâmpadas</span>
       </li>
-      <li data-id="Pilhas e Baterias">
+      <li data-id=" Pilhas e Baterias">
         <img src="assets/baterias.svg" alt="Pilhas e Baterias" /><span
           >Pilhas e Baterias</span
         >
       </li>
-      <li data-id="Papéis e Papelão">
+      <li data-id=" Papéis e Papelão">
         <img src="assets/papeis-papelao.svg" alt="Papéis e Papelão" /><span
           >Papéis e Papelão</span
         >
       </li>
 
-      <li data-id="Resíduos Eletrônicos">
+      <li data-id=" Resíduos Eletrônicos">
         <img src="assets/eletronicos.svg" alt="Resíduos Eletrônicos" /><span
           >Resíduos Eletrônicos</span
         >
       </li>
-      <li data-id="Resíduos Orgânicos">
+      <li data-id=" Resíduos Orgânicos">
         <img src="assets/organicos.svg" alt="Resíduos Orgânicos" /><span
           >Resíduos Orgânicos</span
         >
       </li>
-      <li data-id="Óleo de Cozinha">
+      <li data-id=" Óleo de Cozinha">
         <img src="assets/oleo.svg" alt="Óleo de Cozinha" /><span
           >Óleo de Cozinha</span
         >
