feat: update layout, text, and responsiveness

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -29,3 +29,23 @@ h6 {
   font-family: Ubuntu, sans-serif;
   color: var(--title-color);
 }
+
+footer {
+  background: #34cb79;  
+  text-align: center;
+  color: #fff;  
+  font-size: 16px;
+  height: 5vh;  
+  position: relative;  
+  line-height: 5vh;
+}
+
+footer a{
+  color: #ffffff;
+  font-weight: bold;
+  text-decoration: none;
+}
+footer a:hover{
+    background-color: #2fb85e;
+
+}
