--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -96,7 +96,8 @@ styles %}
   <button type="submit">Cadastrar ponto de coleta</button>
 </form>
 {% endblock content %} {% block modal %} {% if saved %} {% include
-"partials/point-created.html" %} {% endif %} {% endblock modal %} {% block
+"partials/point-created.html" %} 
+{% endif %}{% include "partials/page-footer.html" %} {% endblock modal %} {% block
 scripts %}
 <script src="/scripts/create-point.js"></script>
 {% endblock scripts %}
