--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -30,4 +30,6 @@ styles %}
 </main>
 {% endblock content %} {% block scripts %}
 <script src="/scripts/index.js"></script>
-{% endblock scripts %}
+{% endblock scripts %}{% block modal %} 
+{% include "partials/page-footer.html" %}
+{% endblock modal %}
